Tue, Apr 16, 2024, 3:05 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -17,11 +17,9 @@
 
                 <form action="/">
                     <input type="text" autofocus placeholder="Name" id="name" action="post">
-                    <
-
-
-
-                    <button>Submit</button>
+                    <input type="date">
+                    <input type="month">
+                    <input type="submit">
                 </form>
 
 
