Tue, Apr 16, 2024, 3:07 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -15,11 +15,11 @@
 
                 <h2>Add a Birthday</h2>
 
-                <form action="/">
-                    <input type="text" autofocus placeholder="Name" id="name" action="post">
+                <form action="/" method="post">
+                    <input type="text" autocomplete=off autofocus placeholder="Name" id="name">
                     <input type="date">
                     <input type="month">
-                    <input type="submit">
+                    <button>Submit</button>
                 </form>
 
 
