--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -18,8 +18,10 @@
                 <form action="/" method="post">
                     <input type="text" autocomplete=off autofocus placeholder="Name" id="name">
                     <input type="date">
-                    <input type="submit">
+                    <button>Submit</button>
                 </form>
+
+                <div>Response</div>
 
 
             </div>
