Tue, Apr 16, 2024, 3:24 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -21,7 +21,7 @@
                     <button>Submit</button>
                 </form>
 
-                <div>Response</div>
+                <div class="response">Response</div>
 
 
             </div>
