--- a/birthdays/static/styles.css
+++ b/birthdays/static/styles.css
@@ -37,6 +37,11 @@ body {
     transition: color 2s ease-in-out, background-color 0.15s ease-in-out;
 }
 
+.response {
+    text-align: center;
+    font-size: 20px;
+}
+
 h1 {
     font-family: 'Montserrat', sans-serif;
     font-size: 48px;
