Tue, Apr 16, 2024, 3:37 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -17,7 +17,7 @@
 
                 <form action="/" method="post">
                     <input type="text" autocomplete=off autofocus placeholder="Name" id="name">
-                    <input type="date">
+                    <input type="date" id="date">
                     <button>Submit</button>
                 </form>
 
