--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -18,7 +18,7 @@
                 <form action="/" method="post">
                     <input type="text" autocomplete=off autofocus placeholder="Name" id="name">
                     <input type="date" id="date">
-                    <button>Submit</button>
+                    <button type="submit">Submit</button>
                 </form>
 
                 <div class="response">Response</div>
