--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -21,7 +21,7 @@
                     <button type="submit">Submit</button>
                 </form>
 
-                <div class="response">Response</div>
+                <div class="response">{{ response }}</div>
 
 
             </div>
