--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -16,7 +16,7 @@
                 <h2>Add a Birthday</h2>
 
                 <form action="/" method="post">
-                    <input type="text" autocomplete=off autofocus placeholder="Name" name="name">
+                    <input type="text" autocomplete=off autofocus placeholder="Name" name="name" required>
                     <input type="date" name="date">
                     <button type="submit">Submit</button>
                 </form>
