Wed, Apr 17, 2024, 11:44 AM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -17,7 +17,7 @@
 
                 <form action="/" method="post">
                     <input type="text" autocomplete=off autofocus placeholder="Name" name="name" required>
-                    <input type="date" name="date">
+                    <input type="date" name="date" required>
                     <button type="submit">Submit</button>
                 </form>
 
