--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -33,6 +33,7 @@
                         <tr>
                             <th>Name</th>
                             <th>Birthday</th>
+                            <th></th>
                         </tr>
                     </thead>
                     <tbody id="text">
@@ -48,7 +49,13 @@
                                 let html = '';
                                 for (birthday of birthdayObj)
                                 {
-                                   html += `<tr><th>${birthday.name}</th><th>${birthday.day} ${months[birthday.month - 1]}</th></tr>`
+                                   html += `<tr>
+                                                <th>${birthday.name}</th><th>${birthday.day} ${months[birthday.month - 1]}</th>
+                                                <th>
+                                                    <form action="/" method="post">
+                                                        <button>Delete</button></th>
+                                                    </form>
+                                            </tr>`
                                 }
                                 document.querySelector('#text').innerHTML = html;
                             }
