Wed, Apr 17, 2024, 12:24 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -53,7 +53,7 @@
                                                 <th>${birthday.name}</th><th>${birthday.day} ${months[birthday.month - 1]}</th>
                                                 <th>
                                                     <form action="/" method="post">
-                                                        <input type="hidden" id={birthday.}
+                                                        <input type="hidden" id=${birthday.id}
                                                         <button>Delete</button></th>
                                                     </form>
                                             </tr>`
