--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -52,7 +52,7 @@
                                    html += `<tr>
                                                 <th>${birthday.name}</th><th>${birthday.day} ${months[birthday.month - 1]}</th>
                                                 <th>
-                                                    <form action="/" method="post">
+                                                    <form action="/delete" method="post">
                                                         <input type="hidden" name="id" value="${birthday.id}">
                                                         <button>Delete</button>
                                                     </form>
