--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -15,7 +15,7 @@
 
                 <h2>Add a Birthday</h2>
 
-                <form action="/" method="post">
+                <form action="/add" method="post">
                     <input type="text" autocomplete=off autofocus placeholder="Name" name="name" required>
                     <input type="date" name="date" required>
                     <button type="submit">Submit</button>
