Wed, Apr 17, 2024, 2:26 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -15,13 +15,16 @@
 
                 <h2>Add a Birthday</h2>
 
-                <form action="/add" method="post">
-                    <input type="text" autocomplete=off autofocus placeholder="Name" name="name" required>
-                    <input type="date" name="date" required>
-                    <button type="submit">Submit</button>
-                </form>
+                <input id="inputtext" type="text" autocomplete=off autofocus placeholder="Name" name="name" required>
+                <input id="inputdate" type="date" name="date" required>
+                <button id="inputbutton" type="submit">Submit</button>
 
                 <div class="response">{{ response }}</div>
+
+                <script>
+                    inputbutton = document.querySelector(#)
+
+                </script>
 
             </div>
 
