Wed, Apr 17, 2024, 2:34 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -22,7 +22,8 @@
                 <div class="response">{{ response }}</div>
 
                 <script>
-                    inputbutton = document.querySelector(#)
+                    let inputbutton = document.querySelector('#inputbutton')
+                    inputbutton.addEventListener('click', )
 
                 </script>
 
