Wed, Apr 17, 2024, 2:41 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -61,7 +61,10 @@
                             }
 
                             let inputbutton = document.querySelector('#inputbutton')
-                            inputbutton.addEventListener('click', )
+                            inputbutton.addEventListener('click', function()
+
+
+                            )
 
                             fetchlist();
 
