Wed, Apr 17, 2024, 2:43 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -61,7 +61,10 @@
                             }
 
                             let inputbutton = document.querySelector('#inputbutton')
-                            inputbutton.addEventListener('click', function()
+                            inputbutton.addEventListener('click', function() {
+                                
+
+                            }
 
 
                             )
