--- a/flask/shows3/templates/index.html
+++ b/flask/shows3/templates/index.html
@@ -13,10 +13,10 @@
             let response = await fetch('/search?q=' + input.value); // variable response, fetch route search?q= the input value
             let shows = await response.text(); // grabbing text from server
             let showObj = JSON.parse(shows);
-//            let html = '';
-//            for (show of showObj)
-//                html += `<li>${show.title}</li>`
-            document.querySelector('ul').innerHTML = 'hello';
+            let html = '';
+            for (show of showObj)
+                html += `<li>${show.title}</li>`
+            document.querySelector('ul').innerHTML = html;
         });
     </script>
 
