--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -63,6 +63,7 @@
                             let inputbutton = document.querySelector('#inputbutton')
                             inputbutton.addEventListener('click', function() {
                                 document.querySelector('#response').innerHTML = 'HEARD'
+                                fetchlist();
 
                             });
 
