--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -14,11 +14,11 @@
             <div class="section">
 
                 <h2>Add a Birthday</h2>
-
-                <input id="inputtext" type="text" autocomplete=off autofocus placeholder="Name" name="name" required>
-                <input id="inputdate" type="date" name="date" required>
-                <button id="inputbutton" type="submit">Submit</button>
-
+                <form action="/add" method="post">
+                    <input id="inputtext" type="text" autocomplete=off autofocus placeholder="Name" name="name" required>
+                    <input id="inputdate" type="date" name="date" required>
+                    <button id="inputbutton" type="submit">Submit</button>
+                </form>
                 <div id="response"></div>
 
             </div>
