--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -14,11 +14,9 @@
             <div class="section">
 
                 <h2>Add a Birthday</h2>
-                <form action="/add" method="post">
-                    <input id="inputtext" type="text" autocomplete=off autofocus placeholder="Name" name="name" required>
+                    <input id="inputname" type="text" autocomplete=off autofocus placeholder="Name" name="name" required>
                     <input id="inputdate" type="date" name="date" required>
                     <button id="inputbutton" type="submit">Submit</button>
-                </form>
                 <div id="response"></div>
 
             </div>
@@ -62,7 +60,12 @@
 
                             let inputbutton = document.querySelector('#inputbutton')
                             inputbutton.addEventListener('click', function() {
-                                document.querySelector('#response').innerHTML = 'HEARD'
+                                let inputname = document.querySelector("#inputname');
+                                let inputdate = document.querySelector("#inputdate');
+                                document.querySelector('#response').innerHTML = inputname.name;
+
+
+
                                 fetchlist();
                             });
 
