Wed, Apr 17, 2024, 3:20 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -62,7 +62,7 @@
                             inputbutton.addEventListener('click', function() {
                                 let inputname = document.querySelector("#inputname');
                                 let inputdate = document.querySelector("#inputdate');
-                                document.querySelector('#response').innerHTML = inputname.name;
+                                document.querySelector('#response').innerHTML = 'hi';
 
 
 
