Wed, Apr 17, 2024, 3:23 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -58,7 +58,7 @@
                                 document.querySelector('#text').innerHTML = html;
                             }
 
-                            let inputbutton = document.querySelector('#inputbutton')
+                            let inputbutton = document.querySelector('#inputbutton');
                             inputbutton.addEventListener('click', function() {
                                 let inputname = document.querySelector("#inputname');
                                 let inputdate = document.querySelector("#inputdate');
