Wed, Apr 17, 2024, 3:26 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -60,11 +60,11 @@
 
                             let inputbutton = document.querySelector('#inputbutton');
                             inputbutton.addEventListener('click', function() {
-                                let inputname = document.querySelector("#inputname');
-                                let inputdate = document.querySelector("#inputdate');
-                                document.querySelector('#response').innerHTML = 'hi';
+                                let inputname = document.querySelector('#inputname');
+                                let inputdate = document.querySelector('#inputdate');
+//                                document.querySelector('#response').innerHTML = inputdate.value;
 
-
+                                
 
                                 fetchlist();
                             });
