Wed, Apr 17, 2024, 3:32 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -64,12 +64,11 @@
                                 let inputdate = document.querySelector('#inputdate');
 //                                document.querySelector('#response').innerHTML = inputdate.value;
 
-                                $.post("/add",
-                                {
-                                    name: "donald",
-                                    date: "2024-04-03"
-                                }
-                                );
+                                $.ajax({
+                                    type : 'POST',
+                                    url : "/add",
+                                    data : {name: "donald", date: "2024-04-03"}
+                                });
 
                                 fetchlist();
                             });
