Wed, Apr 17, 2024, 4:17 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -70,8 +70,7 @@
                             inputbutton.addEventListener('click', function() {
                                 let inputname = document.querySelector('#inputname');
                                 let inputdate = document.querySelector('#inputdate');
-                                addrecord(inputname.value, inputdate.value)
-
+                                addrecord(inputname.value, inputdate.value);
                                 fetchlist();
                             });
 
