Wed, Apr 17, 2024, 4:30 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -48,7 +48,7 @@
                                    html += `<tr>
                                                 <th>${birthday.name}</th><th>${birthday.day} ${months[birthday.month - 1]}</th>
                                                 <th>
-                                                    <form action="/delete" method="post">
+                                                    <form action="/delete" method="get">
                                                         <input type="hidden" name="id" value="${birthday.id}">
                                                         <button>Delete</button>
                                                     </form>
