--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -43,6 +43,7 @@
                                 let months = ["JAN","FEB","MAR","APRIL","MAY","JUNE","JULY","AUG","SEP","OCT","NOV","DEC"];
 
                                 let html = '';
+                                let i = 0;
                                 for (birthday of birthdayObj)
                                 {
                                    html += `<tr>
@@ -50,10 +51,11 @@
                                                 <th>
                                                     <form action="/delete" method="get">
                                                         <input type="hidden" name="id" value="${birthday.id}">
-                                                        <button>Delete</button>
+                                                        <button id="#${i}">Delete</button>
                                                     </form>
                                                 </th>
                                             </tr>`
+                                    i += 1;
                                 }
                                 document.querySelector('#text').innerHTML = html;
                             }
