Wed, Apr 17, 2024, 4:38 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -51,7 +51,7 @@
                                                 <th>
                                                     <form action="/delete" method="get">
                                                         <input type="hidden" name="id" value="${birthday.id}">
-                                                        <button id="#${i}">Delete</button>
+                                                        <button id="${i}">Delete</button>
                                                     </form>
                                                 </th>
                                             </tr>`
