--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -69,6 +69,15 @@
                                 fetchlist();
                             }
 
+                            async function delrecord(id) {
+                                let strparam = '/del?id=' + id;
+                                let response = await fetch(strparam); // variable response
+                                let responset = await response.text();
+
+                                document.querySelector('#response').innerHTML = responset;
+                                fetchlist();
+                            }
+
                             let inputbutton = document.querySelector('#inputbutton');
                             document.addEventListener('DOMContentLoaded', function() {
                                 inputbutton.addEventListener('click', function() {
