--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -58,6 +58,9 @@
                                     i += 1;
                                 }
                                 document.querySelector('#text').innerHTML = html;
+
+                                // add listeners to all
+                                for ()
                             }
 
                             async function addrecord(name, date) {
