Wed, Apr 17, 2024, 4:57 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -43,7 +43,7 @@
                                 let months = ["JAN","FEB","MAR","APRIL","MAY","JUNE","JULY","AUG","SEP","OCT","NOV","DEC"];
 
                                 let html = '';
-                                let i = 0;
+
                                 for (birthday of birthdayObj)
                                 {
                                    html += `<tr>
@@ -55,13 +55,12 @@
                                                     </form>
                                                 </th>
                                             </tr>`
-                                    i += 1;
                                 }
                                 document.querySelector('#text').innerHTML = html;
 
                                 // add listeners to all
 
-                                for (let j = 0; j < i; j++) {
+                                for (birthday of birthdayObj) {
                                     let strbutton = "'#"+birthday.id+"'";
                                     let eventbutton = document.querySelector(strbutton);
                                         eventbutton.addEventListener('click', function() {
