Wed, Apr 17, 2024, 4:59 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -64,8 +64,7 @@
                                     let strbutton = "'#"+birthday.id+"'";
                                     let eventbutton = document.querySelector(strbutton);
                                         eventbutton.addEventListener('click', function() {
-                                            let  = document.querySelector('#inputdate');
-                                            addrecord(inputname.value, inputdate.value);
+                                            delrecord(birthday.id);
                                         });
 
                                 }
