Wed, Apr 17, 2024, 6:15 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -62,9 +62,11 @@
 
                                 for (birthday of birthdayObj) {
                                     let strbutton = "'#"+birthday.id+"'";
-                                    let eventbutton = document.querySelector(strbutton);
-                                        eventbutton.addEventListener('click', function() {
-                                            delrecord(birthday.id);
+                                    document.querySelector.innerHTML('#response') = strbutton;
+
+                                    //                                    let eventbutton = document.querySelector(strbutton);
+//                                        eventbutton.addEventListener('click', function() {
+//                                            delrecord(birthday.id);
                                         });
 
                                 }
