--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -63,9 +63,7 @@
                                 for (birthday of birthdayObj) {
                                     let strbutton = "'#"+birthday.id+"'";
 
-                                    let eventbutton = document.querySelector(strbutton);
-                                        eventbutton.addEventListener('click', function() {
-                                            delrecord(birthday.id);
+                                    document.querySelector('#response').innerHTML = strbutton
                                         });
 
                                 }
