Wed, Apr 17, 2024, 9:51 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -61,7 +61,7 @@
                                 // add listeners to all
 
                                 for (birthday of birthdayObj) {
-                                    let strbutton = "'#"+birthday.id+"'";
+                                    let strbutton = "#"+birthday.id;
 
                                     document.querySelector('#response').innerHTML = strbutton
                                         });
