Wed, Apr 17, 2024, 10:03 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -63,7 +63,7 @@
 
                                     let eventbutton = document.querySelector(strbutton);
                                         eventbutton.addEventListener('click', function() {
-                                            delrecord(birthday.id);
+                                            document.querySelector('#response').innerHTML = strbutton;
                                         });
 
                                 }
