Wed, Apr 17, 2024, 10:07 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -58,15 +58,15 @@
 
                                 // add listeners to all
 
-                                for (birthday of birthdayObj) {
+//                                for (birthday of birthdayObj) {
                                     let strbutton = "'#"+birthday.id+"'";
 
-                                    let eventbutton = document.querySelector(strbutton);
+                                    let eventbutton = document.querySelector('#56');
                                         eventbutton.addEventListener('click', function() {
                                             document.querySelector('#response').innerHTML = strbutton;
                                         });
 
-                                }
+//                                }
                             }
 
                             async function addrecord(name, date) {
