Wed, Apr 17, 2024, 10:17 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -61,7 +61,7 @@
                                 for (birthday of birthdayObj) {
                                     let strbutton = "'#id"+birthday.id+"'";
 
-                                    let eventbutton = document.querySelector(strbutton);
+                                    let eventbutton = document.querySelector('#id3');
                                         eventbutton.addEventListener('click', function() {
                                             document.querySelector('#response').innerHTML = strbutton;
                                         });
